objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>External Customer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IFE_B2B_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need B2B Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IFE Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Encrypted_Id__c</fullName>
        <label>IFE Encrypted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airline Customers</fullName>
                </value>
                <value>
                    <fullName>Leasing Company</fullName>
                </value>
                <value>
                    <fullName>OEMs</fullName>
                </value>
                <value>
                    <fullName>Vendor &amp; Partners</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Press</fullName>
                </value>
                <value>
                    <fullName>Current &amp; Future Employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Facebook_Profile_C__c</fullName>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Facebook_Profile__c</fullName>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_LinkedIn_Profile_C__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_OPT_IN__c</fullName>
        <label>Opt-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletter &amp; Blog</fullName>
                </value>
                <value>
                    <fullName>Press Releases</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Solutions Updates</fullName>
                </value>
                <value>
                    <fullName>Trade Shows &amp; Panasonic Hosted Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Offering_of_Interest__c</fullName>
        <label>Offering of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Flight Entertainment (IFE)</fullName>
                </value>
                <value>
                    <fullName>In-Flight Connectivity (IFC)</fullName>
                </value>
                <value>
                    <fullName>Digital Services &amp; Solutions (DSS)</fullName>
                </value>
                <value>
                    <fullName>Panasonic Technical Services (PTS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Product_and_Solutions__c</fullName>
        <label>Product and Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Platforms</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>MECSAA (Middle East, Central and Southern Asia, and Africa)</fullName>
                    <isActive>false</isActive>
                    <label>MECSAA (Middle East, Central and Southern Asia, and Africa)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Role_Dropdown__c</fullName>
        <label>Role DropDown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Level/President</fullName>
                </value>
                <value>
                    <fullName>Director/Vice President</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Intern/Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Tell_Us_More__c</fullName>
        <label>Tell Us More</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Topic_Of_Interest__c</fullName>
        <label>Topic of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Our Offerings</fullName>
                </value>
                <value>
                    <fullName>Careers</fullName>
                </value>
                <value>
                    <fullName>Inflight Wi-Fi Support (Passenger Only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Twitter_Profile_C__c</fullName>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Twitter_Profile__c</fullName>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Offering_of_Interest_C__c</fullName>
        <label>Offering of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Flight Entertainment (IFE)</fullName>
                </value>
                <value>
                    <fullName>In-Flight Connectivity (IFC)</fullName>
                </value>
                <value>
                    <fullName>Digital Services &amp; Solutions (DSS)</fullName>
                </value>
                <value>
                    <fullName>Panasonic Technical Services (PTS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <label>Opt-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletter &amp; Blog</fullName>
                </value>
                <value>
                    <fullName>Press Releases</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Solutions Updates</fullName>
                </value>
                <value>
                    <fullName>Trade Shows &amp; Panasonic Hosted Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy Agreement</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Americas_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Americas</label>
        <queue>Americas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Asia_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Asia</label>
        <queue>Asia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>China_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>China</label>
        <queue>China</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Registrations_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Americas</label>
        <queue>Americas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Europe_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Europe</label>
        <queue>Europe</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Japan_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan</label>
        <queue>Japan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Americas_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>America Sales Region</label>
        <queue>L2I_Americas_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Asia_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Asia Sales Region</label>
        <queue>L2I_Asia_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_China_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>China Sales Region</label>
        <queue>L2I_China_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Europe_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Europe Sales Region</label>
        <queue>L2I_Europe_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Japan_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan Sales Region</label>
        <queue>L2I_Japan_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Middle_East_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Middle East Sales Region</label>
        <queue>L2I_Middle_East_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Oceania_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Oceania Sales Region</label>
        <queue>L2I_Oceania_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Middle_East_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Middle East</label>
        <queue>Middle_East</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>External_Customer</fullName>
        <active>true</active>
        <businessProcess>External Customer</businessProcess>
        <description>Registering and creating external user</description>
        <label>External Customer</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>